# marketplace-database

./: .env  .gitignore  Dockerfile.api  README.md  README_DOCKER.md  docker-compose.yml  docker-manager.sh  init.sql  main.py  pyproject.toml  queries.sql  requirements.txt  sample_data.sql
app/: api.py  database.py
